--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,10 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-    // "exactOptionalPropertyTypes": true,
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true
+    "noFallthroughCasesInSwitch": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noImplicitOverride": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
