--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
