--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "reflect-metadata": "^0.2.1",
     "sequelize": "^6.35.2",
     "sequelize-typescript": "^2.1.6",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
